# RAG-work

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  LIST.md  README.md  README_JOB_MEDICAL.md  chunk_strategy.md  dual_path_optimization.md  package-lock.json  restart.sh  作品简介.md  四大能力实现详解.md  技术报告.md  求职-简历项目描述.md  求职-面试问答清单.md  流式消息优化说明.md  项目设计.md
rag-backend/: .gitignore  CLAUDE.md  check_chunks.py  check_milvus_schema.py  langgraph.json  main.py  pyproject.toml
rag-backend/backend/: .env.example  init_db.py
rag-backend/backend/api/: auth.py  chat.py  crawl.py  knowledge_library.py  rag.py  visual_graph.py
rag-backend/backend/config/: agent.py  database.py  dependencies.py  embedding.py  jwt.py  log.py  models.py  oss.py  redis.py
rag-backend/backend/evaluation/: __init__.py  badcases.py  classifier_lab.py  generation_lab.py  labs.py  medical_safety_lab.py  retrieval_lab.py
rag-backend/backend/migrations/: add_memory_tables.py  add_vectorized_graphed_fields.py
rag-backend/backend/model/: chat_history.py  conversation.py  knowledge_library.py  memory.py  user.py
rag-backend/backend/param/: agent.py  auth.py  chat.py  common.py  crawl.py  knowledge_library.py  visual_graph.py
rag-backend/backend/scripts/: train_retrieval_intent_classifier.py
rag-backend/backend/service/: auth.py  chat.py  chat_history.py  conversation.py  crawl.py  document_processor.py  knowledge_library.py  memory.py  visual_graph.py
rag-backend/backend/tests/: eval_history.jsonl  eval_ragas.py  medic_eval.jsonl  medic_eval_oa_op.jsonl  test_check_milvus_data.py  test_chunk.py  (+21 more)
(+82 files in other folders)
